src/objects/myObject__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>CallStatusAndImage__c</fullName>
        <label>CallStatusAndImage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Status__c</fullName>
        <label>Call_Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefreshCount__c</fullName>
        <label>RefreshCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>myObject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>myObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>